name:                hpffp-ch26-monad-transformers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jo-taro/hpffp-ch26-monad-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              jo-taro
maintainer:          jo-taro@github.com
copyright:           2017 jo-taro
category:            Web
build-type:          Simple
cabal-version:       >=1.24.0
extra-source-files:  README.md

executable hit-counter
  hs-source-dirs:      src
  main-is:             HitCounter.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , scotty
                     , text
                     , containers

executable morra
  hs-source-dirs:      src
  main-is:             Morra.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , containers
                     , random
                     , monad-loops